# data-engineering-nano-degree

./: .gitignore  README.md  pyproject.toml
automating_data_pipelines/airflow/: README.md
capstone_project/: Dockerfile  README.md  airflow.cfg  docker-compose.yaml
capstone_project/dags/: imdb_to_redshift.py  process_imdb_data.py
capstone_project/dags/scripts/: imdb_processor.py
capstone_project/plugins/helpers/: aws_redshift.py  create_redshift_table_query.py
capstone_project/plugins/operators/: __init__.py  create_redshift_cluster.py  create_redshift_table.py  data_validation.py  setup_redshift_connection.py  upload_to_s3.py
cloud_data_warehouses/aws/excercises/: 1_infrastructure_as_code.ipynb  2_parallel_etl.ipynb  3_table_design.ipynb
cloud_data_warehouses/aws/project/: README.md  create_tables.py  dwh_example.cfg  etl.py  sql_queries.py
cloud_data_warehouses/introduction/: 1_connect_explore_pagila.ipynb  2_simple_analysis.ipynb  4_transform_data.ipynb  8_grouping sets.ipynb  9_cube.ipynb
cloud_data_warehouses/introduction/excercises/: 10_columnar_vs_row_storage.ipynb  3_create_facts_dimensions.ipynb  5_compare_query_time.ipynb  6_slicing_dicing.ipynb  7_roll_up_drill_down.ipynb
data_modelling/introduction/: creating_table_with_apache_cassandra.ipynb  creating_table_with_postgres.ipynb
data_modelling/non_relational_databases/exercises/: clustering_column.ipynb  primary_key.ipynb  query_per_table.ipynb  where_clause.ipynb
data_modelling/relational_databases/: docker_commands.txt
spark_data_lakes/project/: README.md  dwh_example.cfg  etl.py
(+52 files in other folders)
