[tool.poetry]
name = "data-engineering-nano-degree"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.5"
jupyterlab = "^3.2.5"
psycopg2 = "^2.9.3"
numpy = "^1.22.0"
cassandra-driver = "^3.25.0"
sql = "^0.4.0"
SQLAlchemy = "^1.4.29"
sqlalchemy_schemadisplay = "^1.3"
pydot = "^1.4.2"
pydot-ng = "^2.0.0"
graphviz = "^0.19.1"
ipython-sql = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
